fix spacing on my recipes

--- a/app/assets/stylesheets/my_recipes.scss
+++ b/app/assets/stylesheets/my_recipes.scss
@@ -49,14 +49,14 @@
   @media (min-width: $desktop) {
     flex: calc(33% - 2rem);
 
-    &:not(:nth-of-type(2n)) {
-      margin-right: 0;
-    }
-
     &:not(:nth-of-type(3n)) {
       margin-right: 2rem;
     }
   }
+}
+
+.my-reicpes-container .recipes-grid.collections .recipe-card-container:not(:nth-of-type(2n)) {
+  margin-right: 0;
 }
 
 .collection-card {
@@ -68,7 +68,7 @@
 
   @media (min-width: $desktop) {
     flex: 0 0 50%;
-    max-width: calc(50% - 2rem);
+    max-width: calc(50% - 1rem);
 
     &:not(:nth-of-type(2n)) {
       margin-right: 2rem;
