--- a/app/assets/stylesheets/recipe_sources.scss
+++ b/app/assets/stylesheets/recipe_sources.scss
@@ -46,7 +46,6 @@
 .recipes-grid {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
 }
 
 .recipes-grid .recipe-card-container {
